[package]
name = "cgp_regression_crossover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
#opt-level = 3
#lto = "fat"


[profile.release]
opt-level = 3
#debug = true
lto = "fat"


[dependencies]
rand = "0.8.5"
rand_core = {version = "0.6.4", features = ["getrandom"] }
rand_chacha = "0.3.1"
ndarray = "0.15.6"
float_eq = "1.0.1"
rustc-hash = "1.1.0"
petgraph = "0.6.3"
nohash-hasher = "0.2.0"
clap = { version = "4.2.5", features = ["derive"] }
itertools-num = "0.1.3"
flate2 = "1.0.27"
rayon = "1.9.0"
itertools = "0.12.1"

[features]
standard = []
ereorder = []
mulambda = []
tournament = []
mulambda_crossover = []
